Corrected joining date format

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>devfinder</title>
   </head>
-  <body class="bg-gray-800 bg-white box-borde sm:h-screen">
+  <body class="bg-gray-800 box-borde sm:h-screen dark">
     <div
       class="h-full flex items-center justify-center flex-col max-w-xl m-auto"
     >
@@ -88,7 +88,7 @@
         </button>
       </div>
 
-      <div class="w-11/12 h-max bg-gray-700 my-4 rounded-lg">
+      <div class="w-11/12 h-max bg-gray-700 my-4 rounded-lg hidden" id="result">
         <div class="grid grid-cols-3 grid-rows-2 relative py-4 sm:py-0 sm:pt-4">
           <div
             class="
